[tool.poetry]
name = "optionalgotrading"
version = "0.1.0"
description = "AI in predicting stock prices"
authors = ["FBisschop <ef.roosegaardebisschop@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
numpy = "^1.26.4"
plotly = "^5.19.0"
xgboost = "^2.0.3"
scikit-learn = "^1.4.1.post1"
ta-lib = "^0.4.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
